# dr-docker

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONSTRAINTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/scripts/: check_boundary_contract_docs.sh
.github/workflows/: boundary-guardrails.yml  ci.yml
docs/: loop_architecture_paradigm.md  runtime_primitives_contract.md
src/dr_docker/: __init__.py  _json_validation.py  adapters.py  batching.py  cidfile.py  cleanup.py  docker_contract.py  subprocess_adapter.py  version.py
src/dr_docker/workers/: __init__.py  core.py  json_stdio.py  sizing.py
src/nl_runtime_primitives/: __init__.py  adapters.py  docker_contract.py  errors.py  langfuse_adapter.py  langfuse_contract.py  local_subprocess.py  stubs.py  version.py
tests/: test_adapter_protocols.py  test_batching.py  test_contract_models.py  test_langfuse_adapters.py  test_local_subprocess_adapter.py  test_subprocess_adapter.py  test_workers.py
