[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "nl-runtime-primitives"
version = "0.3.0"
description = "Typed runtime integration contracts for Docker primitives"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NL Stack" }]
dependencies = [
  "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "ty>=0.0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/nl_runtime_primitives"]
