[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "dr-docker"
version = "0.4.0"
description = "Docker runtime contracts and subprocess adapter"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NL Stack" }]
dependencies = [
  "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "ty>=0.0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "docker: tests that require Docker daemon",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_docker"]
