[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "dr-docker"
version = "0.4.1"
description = "Docker runtime contracts and subprocess adapter"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NL Stack" }]
keywords = ["docker", "runtime", "sandbox", "subprocess", "contracts"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/drothermel/dr-docker"
Repository = "https://github.com/drothermel/dr-docker"
Issues = "https://github.com/drothermel/dr-docker/issues"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "ty>=0.0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "docker: tests that require Docker daemon",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_docker"]
